--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^9.7.0",
+    "eslint-config-react-app": "^7.0.1",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.3.1",
     "vite": "^5.2.11",
+    "vite-plugin-eslint": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,12 +30,11 @@
     "start": "react-scripts start",
     "build": "vite build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
