--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.7.0",
     "eslint-config-react-app": "^7.0.1",
@@ -49,6 +51,7 @@
       "last 1 safari version"
     ]
   },
+  "packageManager": "yarn@4.1.1",
   "devDependencies": {
     "@types/node": "^20.12.12"
   }
