--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.7.0",
     "eslint-config-react-app": "^7.0.1",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
