--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pinklemonade",
-  "version": "0.1.0",
+  "homepage": "www.pinklemonaderollerdisco.co.uk",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
