move images to public and fix imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"paths": {
 			"root": ["./"],
 			"@": ["./src"],
-			"assets/*": ["./src/assets/*"],
+			"assets/*": ["./public/assets/*"],
 			"common/*": ["./src/common/*"],
 			"components/*": ["./src/components/*"],
 			"consts": ["./src/consts"],
